Fixed the tofu link redirection and the tofu image supposed to be shown

--- a/recipes/tofu.html
+++ b/recipes/tofu.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tofu Recipe</h1>
-    <img src=",/images/tofu.webp" alt="Lasagna image" height="310" width="310">
+    <img src="../images/tofu.webp" alt="Lasagna image" height="310" width="310">
     <h2>Description</h2>
     <p>Tofu cubes are marinated and then baked in the oven. The tofu can be used as a<br>
     hot or cold snack or used as salad topping. Don't forget the smoke flavoring, it<br>
