--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/chicken.html">General Tso's Chicken</a></li>
-        <li><a href="./recipes/chicken.html">Baked Tofu</a></li>
+        <li><a href="./recipes/tofu.html">Baked Tofu</a></li>
     </ul>
 
     <h3>Reference</h3>
