--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+
+    <h1 class="header1">Odin Recipes</h1>
     <h2>Foods</h2>
-    <ul>
+    <ul class="body">
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/chicken.html">General Tso's Chicken</a></li>
         <li><a href="./recipes/tofu.html">Baked Tofu</a></li>
